--- a/src/View/QuestionMangement.fxml
+++ b/src/View/QuestionMangement.fxml
@@ -16,17 +16,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.QuestionMangController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.QuestionMangController">
    <top>
       <VBox alignment="TOP_CENTER" prefHeight="43.0" prefWidth="870.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="59.0" prefWidth="219.0">
                <children>
-                  <Button fx:id="exitBT" onAction="#exitGame" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" prefHeight="22.0" prefWidth="31.0" style="-fx-background-color: transparent;">
+                  <Button fx:id="exitBT" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#exitGame" prefHeight="22.0" prefWidth="31.0" style="-fx-background-color: transparent;">
                      <graphic>
                         <ImageView fitHeight="31.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Home.png" />
+                              <Image url="@../images/back.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -54,7 +54,7 @@
             </Separator>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <ComboBox fx:id="diffSelect" nodeOrientation="LEFT_TO_RIGHT" prefHeight="38.0" prefWidth="182.0" promptText="All Questions" stylesheets="@application.css">
+                  <ComboBox fx:id="diffSelect" nodeOrientation="LEFT_TO_RIGHT" prefHeight="46.0" prefWidth="200.0" promptText="All Questions" stylesheets="@application.css">
                      <styleClass>
                         <String fx:value="Feild" />
                         <String fx:value="list-cell" />
@@ -87,7 +87,7 @@
    <left>
       <HBox prefHeight="586.0" prefWidth="871.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="questionsTable" prefHeight="586.0" prefWidth="590.0" styleClass="list-cell" stylesheets="@application.css">
+            <TableView fx:id="questionsTable" prefHeight="547.0" prefWidth="612.0" styleClass="list-cell" stylesheets="@application.css">
                <columns>
                   <TableColumn fx:id="question" prefWidth="461.9100284576416" text="Question" />
                   <TableColumn fx:id="action" prefWidth="124.0" text="Action" />
@@ -96,10 +96,10 @@
                   <Insets left="5.0" />
                </HBox.margin>
             </TableView>
-            <VBox prefHeight="587.0" prefWidth="276.0">
+            <VBox prefHeight="547.0" prefWidth="275.0">
                <children>
-                  <PieChart fx:id="chart" onMouseEntered="#loadChart" prefHeight="463.0" prefWidth="268.0" style="-fx-border-radius: 000000;" stylesheets="@application.css" />
-                  <Button fx:id="addMoreBt" mnemonicParsing="false" onAction="#addMoreQuestions" prefHeight="23.0" prefWidth="122.0" stylesheets="@application.css" text="ADD QUESTION">
+                  <PieChart fx:id="chart" onMouseEntered="#loadChart" prefHeight="463.0" prefWidth="263.0" style="-fx-border-radius: 000000;" stylesheets="@application.css" />
+                  <Button fx:id="addMoreBt" mnemonicParsing="false" onAction="#addMoreQuestions" prefHeight="23.0" prefWidth="139.0" stylesheets="@application.css" text="ADD QUESTION">
                      <font>
                         <Font name="Times New Roman Bold" size="13.0" />
                      </font>
@@ -108,6 +108,9 @@
                      </VBox.margin>
                   </Button>
                </children>
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
             </VBox>
          </children>
       </HBox>
