--- a/src/View/QuestionPopup.fxml
+++ b/src/View/QuestionPopup.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.RadioButton?>
@@ -43,10 +44,14 @@
             </RadioButton>
          </children>
       </VBox>
-      <Button fx:id="checkAnswerBt" layoutX="402.0" layoutY="469.0" mnemonicParsing="false" onAction="#checkAnswer" prefHeight="26.0" prefWidth="125.0" styleClass="list-cell" stylesheets="@application.css" text="Check Answer">
+      <Button fx:id="checkAnswerBt" layoutX="382.0" layoutY="469.0" mnemonicParsing="false" onAction="#checkAnswer" prefHeight="31.0" prefWidth="146.0" stylesheets="@application.css" text="Check Answer">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
+         <styleClass>
+            <String fx:value="list-cell" />
+            <String fx:value="Feild" />
+         </styleClass>
       </Button>
       <Pane fx:id="questionPane" layoutX="34.0" layoutY="39.0" prefHeight="119.0" prefWidth="499.0">
          <children>
